2007-04-24  Edward Hervey  <edward@fluendo.com>

	* pitivi/pitivi.py:
	* pitivi/settings.py:
	* pitivi/ui/mainwindow.py:
	Disable Advanced Mode by default until it works effectivelly.
	If you wish to use it, set the PITIVI_ADVANCED_MODE env variable to 1
	Fixes #432644

2007-04-23  Edward Hervey  <edward@fluendo.com>

	Patch by: Thibaut Girka <thibaut.girka@gmail.com>
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/tracklayer.py:
	* pitivi/ui/viewer.py:
	Make simple timeline view active when it contains elements, even though
	it wasn't previously displayed.
	Fixed #430686

2007-04-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Don't enable render button when we are viewing a temporary source.

2007-04-23  Edward Hervey  <edward@fluendo.com>

	Patch by: Jeff Fortin <nekohayo@gmail.com>
	* pitivi/ui/viewer.py:
	Remove horizontal bar between viewer and viewer controls.
	Fixes #421672

2007-04-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/pixmaps/Makefile.am:
	* pitivi/pixmaps/pitivi-advanced-16.png:
	* pitivi/pixmaps/pitivi-render-16.png:
	Add new 16x16 icons by Andreas Nilsson.
	* pitivi/ui/mainwindow.py:
	Set render icon on the render dialog box.

2007-04-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/pixmaps/Makefile.am:
	Modify for new/removed icons.

2007-04-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/actions.xml:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/viewer.py:
	Move render button to toolbar/menu.
	Patch by: Thibaut Girka <thibaut.girka@gmail.com>
	Fixes #421652
	* pitivi/pixmaps/pitivi-file.png:
	* pitivi/pixmaps/pitivi-sound.png:
	Remove no longer used icons.
	* pitivi/pixmaps/pitivi-advanced.png:
	* pitivi/pixmaps/pitivi-advanced-22.png:
	* pitivi/pixmaps/pitivi-advanced-24.png:
	* pitivi/pixmaps/pitivi-render-22.png:
	* pitivi/pixmaps/pitivi-render-24.png:
	Rename icons.
	New render icon by Andreas Nilsson.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py: