@@ -1,5 +1,11 @@
 2007-04-24  Edward Hervey  <edward@fluendo.com>
 
+	* pitivi/ui/timeline.py:
+	Show explanation message again if a drag was canceled.
+	Fixes #432682
+
+2007-04-24  Edward Hervey  <edward@fluendo.com>
+
 	* pitivi/pitivi.py:
 	* pitivi/settings.py:
 	* pitivi/ui/mainwindow.py:
